--- a/arch/arm/cpu/armv7/mx7/Kconfig
+++ b/arch/arm/cpu/armv7/mx7/Kconfig
@@ -16,6 +16,12 @@ choice
 	prompt "MX7 board select"
 	optional
 
+config TARGET_CL_SOM_IMX7
+        bool "CL-SOM-iMX7"
+        select MX7D
+        select DM
+        select DM_THERMAL
+
 config TARGET_MX7DSABRESD
 	bool "mx7dsabresd"
 	select MX7D
@@ -39,6 +45,7 @@ endchoice
 config SYS_SOC
 	default "mx7"
 
+source "board/compulab/cl_som_imx7/Kconfig"
 source "board/freescale/mx7dsabresd/Kconfig"
 source "board/toradex/colibri_imx7/Kconfig"
 source "board/warp7/Kconfig"
