--- a/configs/cl_som_imx7_defconfig
+++ b/configs/cl_som_imx7_defconfig
@@ -4,6 +4,7 @@ CONFIG_TARGET_CL_SOM_IMX7=y
 CONFIG_ARMV7_BOOT_SEC_DEFAULT=y
 CONFIG_IMX_RDC=y
 CONFIG_IMX_BOOTAUX=y
+CONFIG_OF_BOARD_SETUP=y
 CONFIG_SYS_EXTRA_OPTIONS="IMX_CONFIG=board/compulab/cl_som_imx7/imximage.cfg"
 CONFIG_SPI_BOOT=y
 CONFIG_BOOTDELAY=3
