--- a/configs/cl_som_imx6_defconfig
+++ b/configs/cl_som_imx6_defconfig
@@ -1,5 +1,6 @@
 CONFIG_ARM=y
 CONFIG_TARGET_CL_SOM_IMX6=y
+CONFIG_LOCALVERSION="-th"
 CONFIG_SPL=y
 CONFIG_SYS_EXTRA_OPTIONS="IMX_CONFIG=arch/arm/imx-common/spl_sd.cfg,MX6QDL,SPL"
 # CONFIG_CMD_IMLS is not set
@@ -9,6 +10,6 @@ CONFIG_SYS_EXTRA_OPTIONS="IMX_CONFIG=arch/arm/imx-common/spl_sd.cfg,MX6QDL,SPL"
 # CONFIG_CMD_FLASH is not set
 # CONFIG_CMD_FPGA is not set
 # CONFIG_CMD_SETEXPR is not set
-CONFIG_SPI_FLASH=y
 CONFIG_CMD_DHCP=y
 CONFIG_CMD_PING=y
+CONFIG_SPI_FLASH=y
