arm: imx7d: cl-som-imx7: update device tree blob file name
Update the environment variable fdtfile with the appropriate device tree
blob name. The name is determined by the base board product name.
The detected base board ID is stored in the global variable
cl_som_imx7_base_id.

Signed-off-by: Uri Mashiach <uri.mashiach@compulab.co.il>

--- a/arch/arm/mach-imx/mx7/Kconfig
+++ b/arch/arm/mach-imx/mx7/Kconfig
@@ -26,6 +26,8 @@ config TARGET_CL_SOM_IMX7
 	select DM_THERMAL
 	select MX7D
 	select SUPPORT_SPL
+	select COMPULAB_COMMON
+	select SYS_I2C_EEPROM_BASE
 	imply CMD_DM
 
 config TARGET_MX7DSABRESD
