--- a/arch/arm/dts/ucm-imx8m-mini.dts
+++ b/arch/arm/dts/ucm-imx8m-mini.dts
@@ -16,6 +16,7 @@
 
 #include "fsl-imx8mm.dtsi"
 
+
 / {
 	model = "CompuLab UCM-iMX8M-Mini board";
 	compatible = "cpl,ucm-imx8m-mini", "fsl,imx8mm-evk", "fsl,imx8mm";
@@ -23,6 +24,12 @@
 	chosen {
 		bootargs = "console=ttymxc2,115200 earlycon=ec_imx6q,0x30880000,115200";
 		stdout-patch = &uart3;
+	};
+
+	aliases {
+		mmc0 = &usdhc2;
+		mmc1 = &usdhc3;
+		/delete-property/ mmc2;
 	};
 
 	reg_usdhc2_vmmc: regulator-usdhc2 {
