mcm-imx8m-mini: Refactor spl code
Signed-off-by: Valentin Raevsky <valentin@compulab.co.il>

--- a/board/compulab/mcm-imx8m-mini/Makefile
+++ b/board/compulab/mcm-imx8m-mini/Makefile
@@ -4,12 +4,12 @@
 # SPDX-License-Identifier:      GPL-2.0+
 #
 
-obj-y += mcm-imx8m-mini.o
-
 ccflags-y += -I$(srctree)/board/compulab/plat/imx8mm/
 
 ifdef CONFIG_SPL_BUILD
 obj-y += spl.o
+else 
+obj-y += mcm-imx8m-mini.o
 endif
 
 obj-y += ../plat/imx8mm/
