--- a/tools/env/fw_env.config
+++ b/tools/env/fw_env.config
@@ -6,6 +6,6 @@
 # be the same as the Environment size, which is valid for NOR and SPI-dataflash
 # Device offset must be prefixed with 0x to be parsed as a hexadecimal value.
 
-# Block device for mcm-imx8m-mini
-/dev/mmcblk2boot0	0x1000	0x4000
-#/dev/mmcblk1		0x1000	0x4000
+# Block devices for CompuLab imx8m-mini
+/dev/mmcblk2boot0	0x4400	0x1000
+#/dev/mmcblk1		0x4400	0x1000
