imx8: eeprom: Move to the imx8 platform independent folder
Move the eeprom code the imx8 platform independent folder.
The same code gets used by all CompuLab imx8 boards.

Signed-off-by: Valentin Raevsky <valentin@compulab.co.il>

--- a/board/compulab/mcm-imx8m-mini/Makefile
+++ b/board/compulab/mcm-imx8m-mini/Makefile
@@ -5,6 +5,7 @@
 #
 
 ccflags-y += -I$(srctree)/board/compulab/plat/imx8mm/
+ccflags-y += -I$(srctree)/board/compulab/plat/imx8/
 
 ifdef CONFIG_SPL_BUILD
 obj-y += spl.o
@@ -13,3 +14,4 @@ obj-y += mcm-imx8m-mini.o
 endif
 
 obj-y += ../plat/imx8mm/
+obj-y += ../plat/imx8/
