--- a/configs/iot-gate-imx8.config
+++ b/configs/iot-gate-imx8.config
@@ -12,3 +12,5 @@ CONFIG_VIDEO_LCD_STARTEK_ILI9881C=n
 CONFIG_VIDEO_IMX_SEC_DSI=n
 CONFIG_LED=n
 CONFIG_LED_GPIO=n
+CONFIG_CMD_PCA953X=y
+CONFIG_DM_PCA953X=y
