Add show_suite function
The function shows product names of UCM and SB on boot.

Signed-off-by: Kirill Kapranov <kirill.kapranov@compulab.co.il>

--- a/arch/arm/dts/cpl-imx8m-mini.dtsi
+++ b/arch/arm/dts/cpl-imx8m-mini.dtsi
@@ -226,7 +226,7 @@
 	clock-frequency = <400000>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_i2c1>;
-	status = "disabled";
+	status = "okay";
 
 };
 
