imx8m: ddr: Add Nanya 2G 2400 MTS support
Add Nanya 2G 2400 MTS support.
Addresses the dram issue discovered on this dram configuration.

Signed-off-by: Valentin Raevsky <valentin@compulab.co.il>

--- a/board/compulab/plat/imx8mm/ddr/Makefile
+++ b/board/compulab/plat/imx8mm/ddr/Makefile
@@ -3,3 +3,6 @@
 +obj-y += lpddr4_timing_ff000110.o
 +obj-y += lpddr4_timing_01061010.o
 +obj-y += lpddr4_timing_01050008.o
++ifndef CONFIG_TARGET_MCM_IMX8M_MINI
++obj-y += lpddr4_timing_05000010.o
++endif
