--- a/configs/mcm-imx8m-mini_defconfig
+++ b/configs/mcm-imx8m-mini_defconfig
@@ -96,3 +96,5 @@ CONFIG_EXT4_WRITE=y
 CONFIG_FAT_WRITE=y
 CONFIG_OF_LIBFDT_OVERLAY=y
 # CONFIG_EFI_LOADER is not set
+CONFIG_LED=y
+CONFIG_LED_GPIO=y
