SPL: Disable fake memsize report
The SPL can reports to U-boot a fake memsize, read from EEPROM. This feature is purposed only for
debug; it may be enabled using config.

Signed-off-by: Kirill Kapranov <kirill.kapranov@compulab.co.il>

--- a/arch/arm/mach-imx/imx8m/Kconfig
+++ b/arch/arm/mach-imx/imx8m/Kconfig
@@ -298,5 +298,6 @@ source "board/phytec/phycore_imx8mp/Kconfig"
 source "board/compulab/ucm-imx8m-mini/Kconfig"
 source "board/compulab/mcm-imx8m-mini/Kconfig"
 source "board/compulab/iot-gate-imx8/Kconfig"
+source "board/compulab/plat/Kconfig"
 
 endif
