--- a/configs/cl_som_imx6_defconfig
+++ b/configs/cl_som_imx6_defconfig
@@ -1,5 +1,6 @@
 CONFIG_ARM=y
 CONFIG_TARGET_CL_SOM_IMX6=y
+CONFIG_LOCALVERSION="-cl-som-imx6-1.1"
 CONFIG_SPL=y
 CONFIG_SYS_EXTRA_OPTIONS="IMX_CONFIG=arch/arm/imx-common/spl_sd.cfg,MX6QDL,SPL"
 # CONFIG_CMD_IMLS is not set
