--- a/configs/ucm-imx8m-mini_defconfig
+++ b/configs/ucm-imx8m-mini_defconfig
@@ -5,7 +5,7 @@ CONFIG_SYS_TEXT_BASE=0x40200000
 CONFIG_SYS_MALLOC_F_LEN=0x2000
 CONFIG_TARGET_UCM_IMX8M_MINI=y
 CONFIG_SPL_MMC_SUPPORT=y
-CONFIG_IMX_OPTEE=y
+# CONFIG_IMX_OPTEE is not set
 CONFIG_DEFAULT_DEVICE_TREE="ucm-imx8m-mini"
 CONFIG_FIT=y
 CONFIG_SPL_FIT_GENERATOR="arch/arm/mach-imx/mkimage_fit_atf.sh"
