--- a/board/compulab/ucm-imx8m-mini/Makefile
+++ b/board/compulab/ucm-imx8m-mini/Makefile
@@ -4,11 +4,12 @@
 # SPDX-License-Identifier:      GPL-2.0+
 #
 
-obj-y += ucm-imx8m-mini.o
+ccflags-y += -I$(srctree)/board/compulab/plat/imx8mm/
 
 ifdef CONFIG_SPL_BUILD
-ccflags-y += -I$(srctree)/board/compulab/plat/imx8mm/
 obj-y += spl.o
+else 
+obj-y += ucm-imx8m-mini.o
 endif
 
 obj-y += ../plat/imx8mm/
