--- a/board/compulab/plat/imx8mm/ddr/Makefile
+++ b/board/compulab/plat/imx8mm/ddr/Makefile
@@ -1,8 +1,6 @@
-+obj-y += ddr.o
-+obj-y += lpddr4_timing_ff020008.o
-+obj-y += lpddr4_timing_ff000110.o
-+obj-y += lpddr4_timing_01061010.o
-+obj-y += lpddr4_timing_01050008.o
-+ifndef CONFIG_TARGET_MCM_IMX8M_MINI
-+obj-y += lpddr4_timing_05000010.o
-+endif
+obj-y += ddr.o
+obj-y += lpddr4_timing_ff.o
+obj-y += lpddr4_timing_01.o
+ifndef CONFIG_TARGET_MCM_IMX8M_MINI
+obj-y += lpddr4_timing_05.o
+endif
