--- a/board/compulab/ucm-imx8m-mini/Makefile
+++ b/board/compulab/ucm-imx8m-mini/Makefile
@@ -7,7 +7,8 @@
 obj-y += ucm-imx8m-mini.o
 
 ifdef CONFIG_SPL_BUILD
+ccflags-y += -I$(srctree)/board/compulab/plat/imx8mm/
 obj-y += spl.o
-obj-$(CONFIG_UCM_IMX8M_LPDDR4) += lpddr4_timing.o
-obj-$(CONFIG_UCM_IMX8M_LPDDR4_VAL) += ddr/
 endif
+
+obj-y += ../plat/imx8mm/
