Migration to rel_imx_5.4.3
Signed-off-by: Kirill Kapranov <kirill.kapranov@compulab.co.il>

--- a/configs/ucm-imx8m-mini_defconfig
+++ b/configs/ucm-imx8m-mini_defconfig
@@ -1,3 +1,4 @@
+CONFIG_LOCALVERSION="-rel.1.3.2-rc0"
 CONFIG_ARM=y
 CONFIG_ARCH_IMX8M=y
 CONFIG_SYS_TEXT_BASE=0x40200000
@@ -7,11 +8,13 @@ CONFIG_SPL_MMC_SUPPORT=y
 CONFIG_IMX_OPTEE=y
 CONFIG_DEFAULT_DEVICE_TREE="ucm-imx8m-mini"
 CONFIG_FIT=y
+CONFIG_SPL_FIT_GENERATOR="arch/arm/mach-imx/mkimage_fit_atf.sh"
+CONFIG_SYS_EXTRA_OPTIONS="IMX_CONFIG=arch/arm/mach-imx/imx8m/imximage.cfg,SPL_TEXT_BASE=0x7E1000"
 CONFIG_SPL_LOAD_FIT=y
-CONFIG_SYS_EXTRA_OPTIONS="IMX_CONFIG=arch/arm/mach-imx/spl_sd.cfg,SPL_TEXT_BASE=0x7E1000"
 CONFIG_DEFAULT_FDT_FILE="ucm-imx8m-mini.dtb"
 CONFIG_ARCH_MISC_INIT=y
 CONFIG_SPL=y
+CONFIG_SPL_SERIAL_SUPPORT=y
 CONFIG_SPL_BOARD_INIT=y
 CONFIG_HUSH_PARSER=y
 CONFIG_FASTBOOT=y
@@ -63,8 +66,10 @@ CONFIG_USB=y
 CONFIG_DM_USB=y
 CONFIG_USB_EHCI_HCD=y
 CONFIG_USB_GADGET=y
+CONFIG_USB_GADGET_DOWNLOAD=y
 CONFIG_USB_GADGET_MANUFACTURER="FSL"
 CONFIG_USB_GADGET_VENDOR_NUM=0x0525
 CONFIG_USB_GADGET_PRODUCT_NUM=0xa4a5
 CONFIG_SDP_LOADADDR=0x40400000
+CONFIG_NR_DRAM_BANKS=4
 CONFIG_SPL_GPIO_SUPPORT=y
