env: introduce CONFIG_ENV_START_DEFAULT
CONFIG_ENV_START_DEFAULT should be used to load default environment at
start up regardless of the environment on the storage device and still
have an option to save the environment to the storage device.

Signed-off-by: Ilya Ledvich <ilya@compulab.co.il>
Signed-off-by: Valentin Raevsky <valentin@compulab.co.il>

--- a/common/Kconfig
+++ b/common/Kconfig
@@ -241,6 +241,11 @@ config ENV_UBI_VOLUME
 
 endif
 
+config ENV_START_DEFAULT
+	bool "Always use default environment"
+	default n
+	help
+	  Always use default environment.
 endmenu
 
 config BOOTDELAY
